src/objects/inscor__Condition_Code__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Condition_Code_Rank__c</fullName>
        <label>Condition Code Rank</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Data_Services_Condition_Code__c</fullName>
        <label>Data Services Condition Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>SV</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_Services1__c</fullName>
        <label>Hide from Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Hide_From_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_Services__c</fullName>
        <label>Hide from Services - RETIRED</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>Partsbase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Material_Cert_Active_Side__c</fullName>
        <label>Material Cert Active Side</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14-17</fullName>
                </value>
                <value>
                    <fullName>18-21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Show_in_Summary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Summary_Order__c</fullName>
        <label>Summary Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Condition Code</label>
    <listViews>
        <fullName>All_Condition_Codes</fullName>
        <columns>NAME</columns>
        <columns>inscor__Description__c</columns>
        <columns>inscor__Show_in_Summary__c</columns>
        <columns>inscor__Summary_Order__c</columns>
        <columns>inscor__Data_Services_Condition_Code__c</columns>
        <columns>inscor__Hide_from_Services1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Condition Codes</label>
    </listViews>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Description__c</columns>
        <columns>inscor__Show_in_Summary__c</columns>
        <columns>inscor__Summary_Order__c</columns>
        <columns>inscor__Data_Services_Condition_Code__c</columns>
        <columns>inscor__Hide_from_Services1__c</columns>
        <columns>inscor__External_Reference_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Condition Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Summary_Order_required_if_shown</fullName>
        <active>true</active>
        <errorConditionFormula>and( inscor__Show_in_Summary__c = true,  or(inscor__Summary_Order__c  = 0, isnull(inscor__Summary_Order__c), isblank(inscor__Summary_Order__c)))</errorConditionFormula>
        <errorMessage>Summary order cannot be blank or 0 if Show Is Summary is checked</errorMessage>
    </validationRules>
</CustomObject>